--- a/src/components/BracketItem.module.css
+++ b/src/components/BracketItem.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     border: var(--border);
-    padding: 1.7rem 1.5rem 1rem 1.5rem;
+    padding: 1.7rem 1.5rem 1rem 1rem;
 }
 
 .liDiv div {
@@ -24,4 +24,16 @@
 .flag {
     width: 2rem;
     height: 2rem;
+}
+
+.teamName {
+    font-size: 1rem;
+}
+
+.date {
+    font-size: 0.7rem;
+}
+
+.text {
+    font-size: 0.7rem;
 }
