More css add to the home page

--- a/src/components/BracketItem.module.css
+++ b/src/components/BracketItem.module.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: var(--border);
-    padding: 1.7rem 1.5rem 1rem 1rem;
+    border: 1px solid var(--light-color);
+    padding: 2.1rem 1.5rem 1rem 1rem;
+    position: relative;
+    background-color: rgb(62, 54, 97);
+    border-radius: 10px;
 }
 
 .liDiv div {
@@ -21,19 +24,39 @@
     margin-left: auto;
 }
 
+/* .rowTeam {
+    margin: 5px;
+} */
+
 .flag {
     width: 2rem;
     height: 2rem;
+
 }
 
 .teamName {
     font-size: 1rem;
+    color: var(--light-color);
 }
 
 .date {
+    padding: 5px;
     font-size: 0.7rem;
+    color: var(--light-color);
+    /* position: absolute;
+    left: 40%; */
+    margin: -15px 0 5px 60px;
 }
 
 .text {
-    font-size: 0.7rem;
+    font-size: 0.75rem;
+    color: var(--light-color);
+    position: absolute;
+    top: 5%;
+    padding-bottom: 5px;
+    font-style: italic;
+}
+
+.score {
+    color: var(--light-color);
 }
