--- a/src/components/GroupStageBox.module.css
+++ b/src/components/GroupStageBox.module.css
@@ -1,8 +1,14 @@
 .container {
-    margin-top: 3rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    background: rgb(13, 30, 98);
+    background: radial-gradient(circle, rgba(13, 30, 98, 1) 0%, rgba(33, 33, 68, 1) 100%);
+}
+
+.container h2 {
+    color: var(--light-color);
 }
 
 .box {
