--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,17 +1,26 @@
 .nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
+    padding-top: 100px;
+    z-index: 10;
 }
 
 .nav ul {
     display: flex;
-    gap: 3rem;
+    justify-content: space-around;
+    gap: 100px;
 }
 
-.nav li a {
+.nav ul li a {
     text-decoration: none;
-    font-size: 1rem;
-    font-weight: 600;
+    color: var(--light-color);
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+    font-family: Roboto, sans-serif;
+    font-style: italic;
+}
+
+.nav ul li a:hover {
+    color: rgb(103, 104, 114);
+    transition: 0.3s ease;
 }
