--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import "https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap";
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* GLOBAL RESET */
 *,
@@ -22,10 +23,22 @@ canvas,
 svg {
     display: block;
     max-width: 100%;
+    width: 100%;
 }
 
 body {
     font-family: "Manrope", sans-serif;
     font-weight: 400;
     line-height: 1.6;
+}
+
+/* Color Variables */
+:root {
+    --blue-primary-color: #000d40;
+    --blue-secondary-color: #0D1E62;
+    --blue-tertiary-color: #143cda;
+
+    --purple-color: #213690;
+    --yellow-color: #F9BF4B;
+    --light-color: #e2e0e0;
 }
