--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -24,3 +24,16 @@
     color: rgb(103, 104, 114);
     transition: 0.3s ease;
 }
+
+@media screen and (max-width: 620px) {
+    .nav ul li a {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .nav ul {
+        flex-direction: column;
+        gap: 20px;
+    }
+}
