--- a/src/components/GroupResult.module.css
+++ b/src/components/GroupResult.module.css
@@ -2,7 +2,12 @@
     text-align: center;
     background-color: rgb(78, 81, 151);
     box-shadow: 1px 1px 1px rgba(73, 73, 158, 0.523);
-    border-radius: 2px;
+    border-radius: 10px;
+}
+
+.groupResult:hover {
+    background-color: rgb(57, 58, 173);
+    transition: 0.3s;
 }
 
 .container {
