--- a/src/pages/TeamDetails.module.css
+++ b/src/pages/TeamDetails.module.css
@@ -7,31 +7,41 @@
     align-items: center;
     gap: 30px;
     padding-top: 50px;
-
+    /* background-color: var(--blue-primary-color); */
+    background: rgb(0, 13, 64);
+    background: linear-gradient(328deg, rgba(0, 13, 64, 1) 36%, rgba(23, 27, 124, 1) 36%, rgba(25, 26, 53, 1) 67%, rgba(0, 13, 64, 1) 67%);
 }
+
 
 .mainTable a {
     text-decoration: none;
     padding: 0.7rem 1.6rem;
     text-transform: uppercase;
     font-size: 1.2rem;
-    background-color: var(--blue-secondary-color);
+    background-color: #1e1c6c;
     color: var(--light-color);
     letter-spacing: 0.5px;
-    /* border: 0.5px solid white; */
+    border: 2px solid rgb(128, 128, 131);
+}
+
+.mainTable a:hover {
+    background-color: #110e55;
+    transition: 0.3s;
 }
 
 .mainTable table {
     border-collapse: collapse;
     width: 30%;
-    border-radius: 10px;
+    background-color: #38365d;
 }
 
 th,
 td {
     padding: 10px;
     text-align: center;
-    border: 1px solid black;
+    border: 3px solid rgb(128, 128, 131);
+    color: white;
+    text-shadow: 1px 1px black;
 }
 
 
@@ -44,6 +54,7 @@ td {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    border: 0.5px solid rgb(191, 183, 183);
 }
 
 .btnBack {
@@ -55,22 +66,34 @@ td {
     font-size: 1.5rem;
     border: none;
     cursor: pointer;
+    background-color: #1e1c6c;
+    border: 2px solid rgb(128, 128, 131);
+    color: var(--light-color);
+}
+
+.btnBack:hover {
+    background-color: rgb(4, 5, 45);
+    transition: 0.3s;
 }
 
 .gk {
-    background-color: green;
+    background-color: rgb(8, 70, 8);
+    color: white;
 }
 
 .df {
-    background-color: brown;
+    background-color: rgb(69, 9, 9);
+    color: white;
 }
 
 .mf {
-    background-color: rgb(103, 102, 120);
+    background-color: rgb(11, 44, 64);
+    color: rgb(255, 255, 255);
 }
 
-.fr {
-    background-color: crimson;
+.fw {
+    background-color: rgb(57, 62, 4);
+    color: white;
 }
 
 @media screen and (max-width: 426px) {
