--- a/src/pages/MatchDetails.module.css
+++ b/src/pages/MatchDetails.module.css
@@ -210,6 +210,12 @@
     .result {
         font-size: 1.5rem;
     }
+
+    .btnDetailsWrapper {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
 }
 
 
